@@ -15,6 +15,7 @@ VDR 1.7.29
 	Pressing record start Instant server recording. (Works only correct if channels on Vip & Server are the same)
 	Recording info shows channelnumber.
 	EPG filter on 23 expanded.
+	EPG filter on Cable set to Dutch / Ziggo.
 
 0.16	EPG/schedule info remove on channel switch
 	Exit Guide View removes epg/schedule info
